--- a/mickel.html
+++ b/mickel.html
@@ -6,6 +6,6 @@
     <title>Punya Mickel</title>
 </head>
 <body>
-    Ini adalah file saya jangan ganggu yaa!!!
+    Ini adalah file saya jangan ganggu yaa!!! Paham
 </body>
 </html>
